<resources>
    <string name="app_name">Calculator</string>
    <string name="Number0">0</string>
    <string name="Number1">1</string>
    <string name="Number2">2</string>
    <string name="Number3">3</string>
    <string name="Number4">4</string>
    <string name="Number5">5</string>
    <string name="Number6">6</string>
    <string name="Number7">7</string>
    <string name="Number8">8</string>
    <string name="Number9">9</string>
    <string name="OperationEquals">=</string>
    <string name="OperationPlus">+</string>
    <string name="OperationMinus">-</string>
    <string name="OperationMultiply">*</string>
    <string name="OperationDivide">/</string>
    <string name="Comma">,</string>
    <string name="CalcText">Calculated Number</string>
    <string name="DeleteAll">CE</string>
    <string name="Delete">C</string>
</resources>
