<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pablo.calculator.MainActivity"
    android:stretchColumns="0,1,2,3"
    android:shrinkColumns="0,1,2,3">


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView android:id="@+id/calcText"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/CalcText"
            android:layout_span="4"
            android:textSize="40sp" />


    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:measureWithLargestChild="false">

        <!-- CE -->
        <Button
            android:id="@+id/CE"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="12"
            android:text="@string/DeleteAll"
            android:onClick="deleteAll"/>

        <!--&lt;!&ndash; C &ndash;&gt;-->
        <!--<Button-->
            <!--android:id="@+id/C"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/Delete"-->
            <!--android:onClick=""/>-->

        <!-- / -->
        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/OperationDivide"
            android:onClick="division"/>

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <!-- 7 -->
        <Button
            android:id="@+id/button7"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Number7"
            android:onClick="add7"/>

        <!-- 8 -->
        <Button
            android:id="@+id/button8"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Number8"
            android:onClick="add8"/>

        <!-- 9 -->
        <Button
            android:id="@+id/button9"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Number9"
            android:onClick="add9"/>

        <!-- * -->
        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/OperationMultiply"
            android:onClick="multiplication"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <!-- 4 -->
        <Button
            android:id="@+id/button4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Number4"
            android:onClick="add4"/>

        <!-- 5 -->
        <Button
            android:id="@+id/button5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Number5"
            android:onClick="add5"/>

        <!-- 6 -->
        <Button
            android:id="@+id/button6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Number6"
            android:onClick="add6"/>

        <!-- - -->
        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/OperationMinus"
            android:onClick="subtraction"/>
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <!-- 1 -->
        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Number1"
            android:onClick="add1"/>

        <!--2-->
        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Number2"
            android:onClick="add2"/>


        <!-- 3 -->
        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Number3"
            android:onClick="add3"/>

        <!-- + -->
        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/OperationPlus"
            android:onClick="addition"/>
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <!-- 0 -->
        <Button
            android:id="@+id/button0"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="12"
            android:text="@string/Number0"
            android:onClick="add0"/>

        <!-- , -->
        <Button
            android:id="@+id/buttonComma"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Comma"
            android:onClick="comma"/>

        <!-- = -->
        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/OperationEquals"
            android:onClick="equals"/>
    </TableRow>
</TableLayout>
